pld-comp/tests/ifcc-test-output/testfiles-1_8_var_all/gcc-compile.txt
input.c: In function ‘main’:
input.c:10:5: error: ‘az’ undeclared (first use in this function); did you mean ‘a’?
     az;
     ^~
     a
input.c:10:5: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
